--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CQW4G8232X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CQW4G8232X');
+</script>
 
 <body class="bg-gray-50 dark:bg-gray-900 transition-colors">
     <!-- Navigation -->
