--- a/index.html
+++ b/index.html
@@ -191,97 +191,87 @@
     </section>
 
     <!-- Experience Section -->
-    <div class="relative max-w-3xl mx-auto py-16">
-        <!-- Timeline line - now stops at the end of the content -->
-        <div
-            class="absolute left-1/2 transform -translate-x-1/2 h-[calc(100%-4rem)] w-1 bg-gradient-to-b from-blue-400 to-indigo-500">
-        </div>
+    <section id="experience" class="py-16 bg-gray-50 dark:bg-gray-900 transition-colors">
+        <div class="container mx-auto px-4">
+            <div class="max-w-3xl mx-auto">
+                <h2 class="text-3xl font-bold text-gray-800 dark:text-white mb-8 transition-colors">Experience</h2>
 
-        <!-- Work Experience Timeline Items -->
-        <div class="timeline-container">
-            <!-- Growth Automation -->
-            <div class="relative mb-20">
-                <!-- Timeline dot -->
-                <div
-                    class="absolute left-1/2 transform -translate-x-1/2 -mt-3 w-6 h-6 rounded-full bg-indigo-500 border-4 border-white dark:border-gray-800 shadow-md z-10">
-                </div>
-
-                <!-- Content box -->
-                <div
-                    class="ml-8 md:ml-0 md:w-5/12 p-6 bg-white dark:bg-gray-800 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 transform hover:-translate-y-1 md:ml-auto">
-                    <div class="flex justify-between items-center mb-2">
-                        <h3 class="text-xl font-bold text-gray-800 dark:text-white">Growth Automation</h3>
-                        <span
-                            class="px-3 py-1 bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 text-sm font-medium rounded-full">Recent</span>
+                <div class="space-y-8">
+                    <!-- Growth Automation -->
+                    <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-sm dark:shadow-gray-700">
+                        <div class="flex justify-between items-start mb-4">
+                            <h3 class="text-xl font-semibold text-gray-800 dark:text-white transition-colors">Frontend
+                                Developer</h3>
+                            <span class="text-sm text-gray-500 dark:text-gray-400 transition-colors">Jan 2024 - Sep
+                                2024</span>
+                        </div>
+                        <h4 class="text-gray-600 dark:text-gray-300 mb-3 transition-colors">Growth Automation | Bangkok,
+                            Thailand</h4>
+                        <ul class="list-disc list-inside text-gray-600 dark:text-gray-300 space-y-2 transition-colors">
+                            <li>Spearheaded the design and development of a high-conversion landing page for SwiftWriter
+                                using Next.js</li>
+                            <li>Built an intuitive, responsive UI for SwiftWriter's AI-powered platform</li>
+                            <li>Delivered seamless integration of backend services using AWS tools</li>
+                        </ul>
                     </div>
-                    <h4 class="text-lg font-medium text-gray-700 dark:text-gray-200 mb-2">Frontend Developer</h4>
-                    <p class="text-gray-600 dark:text-gray-300">Jan 2024 - Sep 2024</p>
-                    <p class="text-gray-500 dark:text-gray-400 mt-2 text-sm">Bangkok, Thailand</p>
-                </div>
-            </div>
 
-            <!-- Dream Desk -->
-            <div class="relative mb-20">
-                <!-- Timeline dot -->
-                <div
-                    class="absolute left-1/2 transform -translate-x-1/2 -mt-3 w-6 h-6 rounded-full bg-blue-500 border-4 border-white dark:border-gray-800 shadow-md z-10">
-                </div>
+                    <!-- Dream Desk -->
+                    <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-sm dark:shadow-gray-700">
+                        <div class="flex justify-between items-start mb-4">
+                            <h3 class="text-xl font-semibold text-gray-800 dark:text-white transition-colors">Full Stack
+                                Developer</h3>
+                            <span class="text-sm text-gray-500 dark:text-gray-400 transition-colors">Apr 2021 - Jan
+                                2024</span>
+                        </div>
+                        <h4 class="text-gray-600 dark:text-gray-300 mb-3 transition-colors">Dream Desk | Yangon, Myanmar
+                        </h4>
+                        <ul class="list-disc list-inside text-gray-600 dark:text-gray-300 space-y-2 transition-colors">
+                            <li>Designed and implemented Office Pro, a mini ERP system, streamlining sales, purchases,
+                                and inventory management</li>
+                            <li>Developed Pickup Pro, a delivery tracking system using Laravel and Angular</li>
+                            <li>Built and optimized websites for logistics and trading companies</li>
+                            <li>Delivered scalable APIs for integration across various business applications</li>
+                        </ul>
+                    </div>
 
-                <!-- Content box - alternate side -->
-                <div
-                    class="ml-8 md:ml-0 md:w-5/12 p-6 bg-white dark:bg-gray-800 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-2">Dream Desk</h3>
-                    <h4 class="text-lg font-medium text-gray-700 dark:text-gray-200 mb-2">Full Stack Developer</h4>
-                    <p class="text-gray-600 dark:text-gray-300">Apr 2021 - Jan 2024</p>
-                    <p class="text-gray-500 dark:text-gray-400 mt-2 text-sm">Yangon, Myanmar</p>
-                </div>
-            </div>
+                    <!-- Code2LAB -->
+                    <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-sm dark:shadow-gray-700">
+                        <div class="flex justify-between items-start mb-4">
+                            <h3 class="text-xl font-semibold text-gray-800 dark:text-white transition-colors">Senior
+                                Software Developer</h3>
+                            <span class="text-sm text-gray-500 dark:text-gray-400 transition-colors">Oct 2021 - Jan
+                                2024</span>
+                        </div>
+                        <h4 class="text-gray-600 dark:text-gray-300 mb-3 transition-colors">Code2LAB | Yangon, Myanmar
+                        </h4>
+                        <ul class="list-disc list-inside text-gray-600 dark:text-gray-300 space-y-2 transition-colors">
+                            <li>Enhanced Smart Sales POS by implementing client-requested features</li>
+                            <li>Upgraded Paymal's cashless payment system, improving campaign functionality</li>
+                            <li>Delivered customized clinic and food court management solutions with Ruby on Rails and
+                                React</li>
+                        </ul>
+                    </div>
 
-            <!-- Code2LAB -->
-            <div class="relative mb-20">
-                <!-- Timeline dot -->
-                <div
-                    class="absolute left-1/2 transform -translate-x-1/2 -mt-3 w-6 h-6 rounded-full bg-indigo-500 border-4 border-white dark:border-gray-800 shadow-md z-10">
-                </div>
-
-                <!-- Content box -->
-                <div
-                    class="ml-8 md:ml-0 md:w-5/12 p-6 bg-white dark:bg-gray-800 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 transform hover:-translate-y-1 md:ml-auto">
-                    <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-2">Code2LAB</h3>
-                    <h4 class="text-lg font-medium text-gray-700 dark:text-gray-200 mb-2">Senior Software Developer</h4>
-                    <p class="text-gray-600 dark:text-gray-300">Oct 2021 - Jan 2024</p>
-                    <p class="text-gray-500 dark:text-gray-400 mt-2 text-sm">Yangon, Myanmar</p>
-                </div>
-            </div>
-
-            <!-- MBCSD -->
-            <div class="relative">
-                <!-- Timeline dot -->
-                <div
-                    class="absolute left-1/2 transform -translate-x-1/2 -mt-3 w-6 h-6 rounded-full bg-blue-500 border-4 border-white dark:border-gray-800 shadow-md z-10">
-                </div>
-
-                <!-- Content box - alternate side -->
-                <div
-                    class="ml-8 md:ml-0 md:w-5/12 p-6 bg-white dark:bg-gray-800 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 transform hover:-translate-y-1">
-                    <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-2">MBCSD</h3>
-                    <h4 class="text-lg font-medium text-gray-700 dark:text-gray-200 mb-2">Software Developer</h4>
-                    <p class="text-gray-600 dark:text-gray-300">Jan 2018 - Dec 2020</p>
-                    <p class="text-gray-500 dark:text-gray-400 mt-2 text-sm">Yangon, Myanmar</p>
+                    <!-- MBCSD -->
+                    <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-sm dark:shadow-gray-700">
+                        <div class="flex justify-between items-start mb-4">
+                            <h3 class="text-xl font-semibold text-gray-800 dark:text-white transition-colors">Software
+                                Developer</h3>
+                            <span class="text-sm text-gray-500 dark:text-gray-400 transition-colors">Jan 2018 - Dec
+                                2020</span>
+                        </div>
+                        <h4 class="text-gray-600 dark:text-gray-300 mb-3 transition-colors">MBCSD | Yangon, Myanmar</h4>
+                        <ul class="list-disc list-inside text-gray-600 dark:text-gray-300 space-y-2 transition-colors">
+                            <li>Enhanced ERP capabilities in IAIMS using VB 6</li>
+                            <li>Developed POS systems for retail and petroleum sectors</li>
+                            <li>Built task and KPI management features for workflow optimization</li>
+                            <li>Contributed to web development projects using Angular and Laravel</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-
-        <!-- Add responsive styling for mobile -->
-        <style>
-            @media (max-width: 768px) {
-                .timeline-container>div>div:nth-child(2) {
-                    margin-left: 2rem !important;
-                    width: calc(100% - 3rem) !important;
-                }
-            }
-        </style>
-    </div>
+    </section>
 
     <!-- Skills Section -->
     <section id="skills" class="py-16 bg-white dark:bg-gray-800 transition-colors">
